feat: adds opensearch dashboards, remote storage, and v3